--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>2048</title>
+  <title>Minecraft HD 2048</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -19,7 +19,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">Minetest 2048</h1>
+      <h1 class="title">Minecraft HD 2048</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -27,7 +27,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbered blocks and get to the <strong>2048 block!</strong></p>
+      <p class="game-intro">Join the numbered blocks and get to the <strong>Diamond 2048 block!</strong></p>
       <a class="restart-button">New Game</a>
     </div>
 
@@ -77,11 +77,11 @@
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This site is not the official version of 2048. You can play the official one on your phone via <a href="http://git.io/2048">http://git.io/2048.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
+    <strong class="important">Note:</strong> This site is not the official version of 2048. Nor is it a licensed Minecraft game by Mojang. You can play the official 2048 on your phone via <a href="http://git.io/2048">http://git.io/2048.</a> You can find the official version of Minecraft at <a href="https://minecraft.net">minecraft.net</a> All other apps or sites are derivatives or fakes, and should be used with caution.
     </p>
     <hr>
     <p>
-    Modified by <a href="https://plus.google.com/+JohnStoume" target="_blank">John J Stoume</a> with textures from the game <a href="http://http://minetest.net/" target="_blank"> Minetest.</a>
+    Modified by <a href="https://plus.google.com/+JohnStoume" target="_blank">John J Stoume</a> with Mincraft textures from the  <a href="http://http://minetest.net/" target="_blank"> Life HD texture pack.</a>
     2048 was created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
   </div>
